fix link jumping

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -125,13 +125,13 @@ li.social-li {
 .nav:hover, .nav:focus {
     color:white;
     background-color: black;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .current:hover, .current:focus {
     color:white;
     background-color: black;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 body {
